borsh-derive/src/internals/attributes/field/snapshots/borsh_derive__internals__attributes__field__tests__bounds_parsing1-2.snap
---
source: borsh-derive/src/internals/attributes/field/mod.rs
expression: debug_print_vec_of_tokenizable(attrs.deserialize)
---
K : Hash + Ord
V : Eq + Ord

