borsh-derive/src/internals/attributes/field/snapshots/borsh_derive__internals__attributes__field__tests__bounds_parsing2.snap
---
source: borsh-derive/src/internals/attributes/field/mod.rs
expression: debug_print_vec_of_tokenizable(attrs.serialize)
---
K : Hash + Eq + borsh :: ser :: BorshSerialize
V : borsh :: ser :: BorshSerialize

