borsh-derive/src/internals/attributes/field/snapshots/borsh_derive__internals__attributes__field__tests__bounds_parsing_error.snap
---
source: borsh-derive/src/internals/attributes/field/mod.rs
expression: err
---
Error(
    "malformed bound attribute, expected `bound(deserialize = ..., serialize = ...)`",
)
