borsh-derive/src/internals/attributes/field/snapshots/borsh_derive__internals__attributes__field__tests__schema_params_parsing_error2.snap
---
source: borsh-derive/src/internals/attributes/field/mod.rs
expression: err
---
Error(
    "malformed schema attribute, expected `schema(params = ..., with_funcs(...))`",
)
