borsh-derive/src/internals/attributes/field/snapshots/borsh_derive__internals__attributes__field__tests__schema_with_funcs_parsing_error.snap
---
source: borsh-derive/src/internals/attributes/field/mod.rs
expression: err
---
Error(
    "both `declaration = ...` and `definitions = ...` have to be specified at the same time",
)
