borsh-derive/src/internals/attributes/field/snapshots/borsh_derive__internals__attributes__field__tests__ser_de_with_parsing1-2.snap
---
source: borsh-derive/src/internals/attributes/field/mod.rs
expression: debug_print_tokenizable(attrs.deserialize_with)
---
third_party_impl :: deserialize_third_party

